# manga-translator

./: .env.example  .gitignore  README.md  docker-compose.ghcr.yml  docker-compose.yml
.github/workflows/: release.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  db.py  llm_gateway.py  main.py  models.py  queue.py  schemas.py  secrets_vault.py  settings_store.py  storage.py
backend/app/prompts/: gem1.txt  gem2.txt  json_schema.json
backend/app/routes/: jobs.py  pages.py  settings.py
backend/app/workers/: stage_a.py  stage_b.py
frontend/: index.html  package.json
frontend/src/: App.jsx  apiClient.js  configSchema.js  style.css
frontend/src/components/: GlobalSettingsPanel.jsx  ImportPanel.jsx  PageEditor.jsx  PagesPanel.jsx  ProgressPanel.jsx  ProjectSettingsPanel.jsx  SetupWizard.jsx  Sidebar.jsx
