[project]
name = "mangat"
version = "0.1.0"
description = "Manga translate + typeset tool"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "alembic>=1.13",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "pillow>=10.2",
  "natsort>=8.4",
  "pdf2image>=1.17",
  "python-dotenv>=1.0"
]

[tool.ruff]
line-length = 100

[tool.uvicorn]

